cmake_minimum_required(VERSION 3.2)
project(MUTSU)

enable_testing()

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(../../TOWNSEMU/src/cpputil ${CMAKE_BINARY_DIR}/cpputil)
add_subdirectory(../../TOWNSEMU/src/device ${CMAKE_BINARY_DIR}/device)
add_subdirectory(../../TOWNSEMU/src/vmbase ${CMAKE_BINARY_DIR}/vmbase)
add_subdirectory(../../TOWNSEMU/src/lineparser ${CMAKE_BINARY_DIR}/lineparser)
add_subdirectory(../../TOWNSEMU/src/ym2612 ${CMAKE_BINARY_DIR}/ym2612)
add_subdirectory(../../TOWNSEMU/src/diskdrive ${CMAKE_BINARY_DIR}/diskdrive)
add_subdirectory(../../TOWNSEMU/src/osdependent/gamepad ${CMAKE_BINARY_DIR}/gamepad)
add_subdirectory(../../TOWNSEMU/src/externals/yssimplesound/src ${CMAKE_BINARY_DIR}/yssimplesound)
add_subdirectory(../../TOWNSEMU/src/externals/fssimplewindow/src ${CMAKE_BINARY_DIR}/fssimplewindow)
add_subdirectory(../../TOWNSEMU/src/externals/yspng ${CMAKE_BINARY_DIR}/yspng)
add_subdirectory(../../TOWNSEMU/src/externals/d77 ${CMAKE_BINARY_DIR}/d77)

add_subdirectory(mc6809)
add_subdirectory(mc6809util)
add_subdirectory(memory)
add_subdirectory(fm77av)
add_subdirectory(main_cui)
add_subdirectory(miscutil)
add_subdirectory(ay38910)
add_subdirectory(tests)
add_subdirectory(outside_world)
add_subdirectory(externals/connect_fssimplewindow)
