cmake_minimum_required(VERSION 3.2)
project(MUTSU)

enable_testing()

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(TSUGARU_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../TOWNSEMU/src)

add_subdirectory(${TSUGARU_SOURCE_DIR}/cpputil ${CMAKE_BINARY_DIR}/cpputil)
add_subdirectory(${TSUGARU_SOURCE_DIR}/device ${CMAKE_BINARY_DIR}/device)
add_subdirectory(${TSUGARU_SOURCE_DIR}/vmbase ${CMAKE_BINARY_DIR}/vmbase)
add_subdirectory(${TSUGARU_SOURCE_DIR}/lineparser ${CMAKE_BINARY_DIR}/lineparser)
add_subdirectory(${TSUGARU_SOURCE_DIR}/ym2612 ${CMAKE_BINARY_DIR}/ym2612)
add_subdirectory(${TSUGARU_SOURCE_DIR}/diskdrive ${CMAKE_BINARY_DIR}/diskdrive)
add_subdirectory(${TSUGARU_SOURCE_DIR}/osdependent/gamepad ${CMAKE_BINARY_DIR}/gamepad)
add_subdirectory(${TSUGARU_SOURCE_DIR}/externals/yssimplesound/src ${CMAKE_BINARY_DIR}/yssimplesound)
add_subdirectory(${TSUGARU_SOURCE_DIR}/externals/fssimplewindow/src ${CMAKE_BINARY_DIR}/fssimplewindow)
add_subdirectory(${TSUGARU_SOURCE_DIR}/externals/yspng ${CMAKE_BINARY_DIR}/yspng)
add_subdirectory(${TSUGARU_SOURCE_DIR}/externals/d77 ${CMAKE_BINARY_DIR}/d77)

add_subdirectory(mc6809)
add_subdirectory(mc6809util)
add_subdirectory(memory)
add_subdirectory(fm77av)
add_subdirectory(main_cui)
add_subdirectory(miscutil)
add_subdirectory(ay38910)
add_subdirectory(ym2203c)
add_subdirectory(tests)
add_subdirectory(outside_world)
add_subdirectory(externals/connect_fssimplewindow)
