add_subdirectory(argv)
add_subdirectory(command)
add_subdirectory(cuithread)


set(TARGET_NAME Mutsu_CUI)
add_executable(${TARGET_NAME} MACOSX_BUNDLE main.cpp)
target_link_libraries(${TARGET_NAME} fssimplewindow_connection fm77av fm77avthread fm77avdef fm77avargv fm77avcommand fm77avcuithread)



set(FM7ROMDIR ${CMAKE_SOURCE_DIR}/../../77AVTEST/ROMS/7)
set(FM77AVROMDIR ${CMAKE_SOURCE_DIR}/../../77AVTEST/ROMS/AV)
set(FM77AV40ROMDIR ${CMAKE_SOURCE_DIR}/../../77AVTEST/ROMS/AV40)
set(DISKIMAGE_DIR ${CMAKE_SOURCE_DIR}/../../77AVTEST/DISK)
set(TAPEIMAGE_DIR ${CMAKE_SOURCE_DIR}/../../77AVTEST/TAPE)
set(EVENTLOG_DIR ${CMAKE_SOURCE_DIR}/../eventLog)

add_test(
	NAME XANADU1_TRAINING_GROUND_START
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/Xanadu1_A.D77"
		-FD1
		"${DISKIMAGE_DIR}/Xanadu1_User.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/XANADU1TEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		0185
		-NOWAIT
)

add_test(
	NAME LAYDOCK_GAMEPLAY
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/LAYDOCK1.D77"
		-FD1
		"${DISKIMAGE_DIR}/LAYDOCK2.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/LAYDOCKTEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		60C0
		-NOWAIT
)

add_test(
	NAME YS1_START
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/YS_A.D77"
		-FD1
		"${DISKIMAGE_DIR}/YS_B.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/YS1TEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		A000
		-NOWAIT
)

add_test(
	NAME POLAR_STAR_III
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/PolarStarIII.T77"
		-EVTLOG
		"${EVENTLOG_DIR}/LOADM.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		018F
		-NOWAIT
)

add_test(
	NAME PLAZMA_LINE_TAPE_TITLE
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/PlazmaLine.T77"
		-EVTLOG
		"${EVENTLOG_DIR}/RUN.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		3B69
		-NOWAIT
)

add_test(
	NAME DELPHIS_TITLE
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/Delphis.T77"
		-EVTLOG
		"${EVENTLOG_DIR}/RUN.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		3FD2
		-NOWAIT
)

add_test(
	NAME DRAGON_SLAYER_TAPE_AUTODEMO
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/DragonSlayer.T77"
		-EVTLOG
		"${EVENTLOG_DIR}/RUN.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		3B0C
		-NOWAIT
)

add_test(
	NAME YS2_OPENING
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/YS2_PROG.D77"
		-UNITTEST
		-POWEROFFAT
		MAIN
		2144
		-NOWAIT
)

add_test(
	NAME DRAGON_BUSTER_AUTODEMO
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/DragonBuster.D77"
		-UNITTEST
		-POWEROFFAT
		MAIN
		0395
		-NOWAIT
)

add_test(
	NAME SPACE_HARRIER_MENU
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/SpaceHarrierA.D77"
		-FD1
		"${DISKIMAGE_DIR}/SpaceHarrierB.D77"
		-UNITTEST
		-POWEROFFAT
		MAIN
		4E56
		-NOWAIT
)

add_test(
	NAME SILPHEED_OPENING
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/Silpheed_1.D77"
		-FD1
		"${DISKIMAGE_DIR}/Silpheed_2.D77"
		-UNITTEST
		-POWEROFFAT
		MAIN
		D645
		-NOWAIT
)
