add_subdirectory(argv)
add_subdirectory(command)
add_subdirectory(cuithread)


set(TARGET_NAME Mutsu_CUI)
add_executable(${TARGET_NAME} MACOSX_BUNDLE main.cpp)
target_link_libraries(${TARGET_NAME} fssimplewindow_connection fm77av fm77avthread fm77avdef fm77avargv fm77avcommand fm77avcuithread)



set(FM7ROMDIR ${CMAKE_SOURCE_DIR}/../../77AVTEST/ROMS/7)
set(FM77AVROMDIR ${CMAKE_SOURCE_DIR}/../../77AVTEST/ROMS/AV)
set(FM77AV40ROMDIR ${CMAKE_SOURCE_DIR}/../../77AVTEST/ROMS/AV40)
set(DISKIMAGE_DIR ${CMAKE_SOURCE_DIR}/../../77AVTEST/DISK)
set(TAPEIMAGE_DIR ${CMAKE_SOURCE_DIR}/../../77AVTEST/TAPE)
set(STATE_DIR ${CMAKE_SOURCE_DIR}/../../77AVTEST/STATE)
set(EVENTLOG_DIR ${CMAKE_SOURCE_DIR}/../eventLog)

add_test(
	NAME FM7DEMO_2017_BY_CAPTAINYS
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${CMAKE_CURRENT_SOURCE_DIR}/../../diskimage/2017_FM7DEMO_CaptainYS_V3.T77"
		-UNITTEST
		-AUTOSTARTTAPE
		-POWEROFFAT
		MAIN
		407F
		-NOWAIT
)

add_test(
	NAME FM7DEMO_2018_BY_CAPTAINYS
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${CMAKE_CURRENT_SOURCE_DIR}/../../diskimage/2018_FM7DEMO_CaptainYS_V1.T77"
		-UNITTEST
		-AUTOSTARTTAPE
		-POWEROFFAT
		MAIN
		128E
		-NOWAIT
)

add_test(
	NAME FM77AVDEMO_2019_BY_CAPTAINYS
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${CMAKE_CURRENT_SOURCE_DIR}/../../diskimage/2019_FM77AVDEMO_CaptainYS_V2.D77"
		-UNITTEST
		-AUTOSTARTTAPE
		-POWEROFFAT
		MAIN
		321D
		-NOWAIT
)

add_test(
	NAME WORLDGOLF2_START
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/WorldGolf2_1.D77"
		-FD1
		"${DISKIMAGE_DIR}/WorldGolf2_2.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/WORLDGOLF2TEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		307D
		-NOWAIT
)

add_test(
	NAME LAPTICK_TITLE
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/Laptick.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/LAPTICKTEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		419F
		-NOWAIT
)

add_test(
	NAME PRO_BASEBALL_FAN_TITLE
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/ProBaseballFan_1.D77"
		-FD1
		"${DISKIMAGE_DIR}/ProBaseballFan_2.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/PROFANTEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		B489
		-NOWAIT
)

add_test(
	NAME MAGUS_START
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/Magus.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/MAGUSTEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		3A6B
		-NOWAIT
)

add_test(
	NAME XANADU1_TRAINING_GROUND_START
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/Xanadu1_A.D77"
		-FD1
		"${DISKIMAGE_DIR}/Xanadu1_User.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/XANADU1TEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		0185
		-NOWAIT
)

add_test(
	NAME XANADU1_LASTBOSS_TO_ENDING
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/Xanadu1_A.D77"
		-FD1
		"${DISKIMAGE_DIR}/Xanadu1_User.D77"
		-INITCMD "LOADSTATE ${STATE_DIR}/Xanadu1Ending.7state"
		-UNITTEST
		-POWEROFFAT
		MAIN
		0193
		-NOWAIT
)

add_test(
	NAME LAYDOCK_GAMEPLAY
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/LAYDOCK1.D77"
		-FD1
		"${DISKIMAGE_DIR}/LAYDOCK2.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/LAYDOCKTEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		60C0
		-NOWAIT
)

add_test(
	NAME DEATH_FORCE_GAMEPLAY
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/DeathForce_1.D77"
		-FD1
		"${DISKIMAGE_DIR}/DeathForceUser.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/DEATHFORCETEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		2632
		-NOWAIT
)

add_test(
	NAME VALIS_START
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/Valis_1.D77"
		-FD1
		"${DISKIMAGE_DIR}/Valis_2.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/VALISTEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		5FFF
		-NOWAIT
)

add_test(
	NAME YS1_START
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/YS_A.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/YS1TEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		A000
		-NOWAIT
)

add_test(
	NAME YS1_ENDING
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/YS_B.D77"
		-INITCMD "LOADSTATE ${STATE_DIR}/YSENDING.7state"
		-UNITTEST
		-POWEROFFAT
		MAIN
		09E4
		-NOWAIT
)

add_test(
	NAME POLAR_STAR_III
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/PolarStarIII.T77"
		-EVTLOG
		"${EVENTLOG_DIR}/LOADM.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		018F
		-NOWAIT
)

add_test(
	NAME PLAZMA_LINE_TAPE_TITLE
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/PlazmaLine.T77"
		-EVTLOG
		"${EVENTLOG_DIR}/RUN.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		3B69
		-NOWAIT
)

add_test(
	NAME DELPHIS_TITLE
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/Delphis.T77"
		-EVTLOG
		"${EVENTLOG_DIR}/RUN.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		3FD2
		-NOWAIT
)

add_test(
	NAME DRAGON_SLAYER_TAPE_AUTODEMO
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/DragonSlayer.T77"
		-EVTLOG
		"${EVENTLOG_DIR}/RUN.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		3B0C
		-NOWAIT
)

add_test(
	NAME YS2_OPENING
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/YS2_PROG.D77"
		-UNITTEST
		-POWEROFFAT
		MAIN
		2144
		-NOWAIT
)

add_test(
	NAME YS2_ENDING
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/YS2_PROG.D77"
		-INITCMD "LOADSTATE ${STATE_DIR}/YS2ENDING.7state"
		-UNITTEST
		-POWEROFFAT
		MAIN
		1024
		-NOWAIT
)

add_test(
	NAME DRAGON_BUSTER_AUTODEMO
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/DragonBuster.D77"
		-UNITTEST
		-POWEROFFAT
		MAIN
		0395
		-NOWAIT
)

add_test(
	NAME SPACE_HARRIER_GAMEPLAY
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/SpaceHarrierA.D77"
		-FD1
		"${DISKIMAGE_DIR}/SpaceHarrierB.D77"
		-EVTLOG
		"${EVENTLOG_DIR}/SPACEHARRIERTEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		540F
		-NOWAIT
)

add_test(
	NAME SILPHEED_OPENING
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/Silpheed_1.D77"
		-FD1
		"${DISKIMAGE_DIR}/Silpheed_2.D77"
		-UNITTEST
		-POWEROFFAT
		MAIN
		D645
		-NOWAIT
)

add_test(
	NAME AMERICAN_TRUCK_TAPE_START
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/AmericanTruck.T77"
		-EVTLOG
		"${EVENTLOG_DIR}/RUN.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		3037
		-NOWAIT
)

add_test(
	NAME HYDLIDE_TAPE
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/Hydlide.T77"
		-EVTLOG
		"${EVENTLOG_DIR}/LOADM.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		2419
		-NOWAIT
)

add_test(
	NAME TRITORN_TAPE_START
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/Tritorn.T77"
		-EVTLOG
		"${EVENTLOG_DIR}/RUN.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		0159
		-NOWAIT
)

add_test(
	NAME JELDA_TAPE_AUTODEMO
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/Jelda.T77"
		-EVTLOG
		"${EVENTLOG_DIR}/LOADM.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		6A16
		-NOWAIT
)

add_test(
	NAME DIGDUG_TAPE_START
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/DigDug.T77"
		-EVTLOG
		"${EVENTLOG_DIR}/RUN.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		572A
		-NOWAIT
)

add_test(
	NAME SPACECRUISER_TAPE_START
	COMMAND
		${TARGET_NAME}
		"${FM7ROMDIR}"
		-TAPE
		"${TAPEIMAGE_DIR}/SpaceCruiser.T77"
		-AUTOSTARTTAPE
		-EVTLOG
		"${EVENTLOG_DIR}/SPACECRUISERTEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		4278
		-NOWAIT
)

add_test(
	NAME KUGYOKUDEN_OPENING
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/KUGYOKU1.d77"
		-FD1
		"${DISKIMAGE_DIR}/KUGYOKU2.d77"
		-UNITTEST
		-POWEROFFAT
		MAIN
		462E
		-NOWAIT
)

add_test(
	NAME DEEPFOREST_OPENING
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/DeepForest_1.d77"
		-FD1
		"${DISKIMAGE_DIR}/DeepForest_2.d77"
		-UNITTEST
		-POWEROFFAT
		MAIN
		6034
		-NOWAIT
)

add_test(
	NAME LOSTPOWER_OPENING
	COMMAND
		${TARGET_NAME}
		"${FM77AVROMDIR}"
		-FD0
		"${DISKIMAGE_DIR}/LostPower_1.d77"
		-FD1
		"${DISKIMAGE_DIR}/LostPower_2.d77"
		-EVTLOG
		"${EVENTLOG_DIR}/LOSTPOWERTEST.evt"
		-UNITTEST
		-POWEROFFAT
		MAIN
		C2EE
		-NOWAIT
)
